Spacing issue in header nav.

--- a/content/themes/glp/less/style.less
+++ b/content/themes/glp/less/style.less
@@ -15,7 +15,7 @@
 		height: 100%;
 		#gradient > .vertical(@gray,@black);
 
-/* 		text-rendering: optimizeLegibility; */
+		text-rendering: optimizeLegibility;
 
 		background: @grayLight url('../img/bg.jpg') center top no-repeat;
 		background-attachment: fixed;
@@ -99,7 +99,7 @@
 					    margin: 5px 0; padding: 0 1em;
 					    text-align: center;
 					    border-right: 1px dotted @grayLight;
-					    line-height: 40px;
+					    line-height: 32px;
 					    font-family: @headingsFontFamily;
 					    font-size: @baseFontSize * 1.167;
 					    color: @grayLighter;
